added jenkins file

--- a/test-output/old/Simplilearn/methods-not-run.html
+++ b/test-output/old/Simplilearn/methods-not-run.html
@@ -1,6 +1,5 @@
 <h2>Methods that were not run</h2><table>
 <tr><td>testng.BaseClass.method3</td></tr>
-<tr><td>testng.AnnotationsExample.test1</td></tr>
-<tr><td>testng.AnnotationsExample.test2</td></tr>
+<tr><td>testng.BaseClass.method4</td></tr>
 <tr><td>testng.AnnotationsExample2.test3</td></tr>
 </table>
