--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,38 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="dcb378">  <td>25/06/08 20:38:45</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.CloseExcel()[pri:0, instance:swaglab_test.LoginTest@3b96c42e]">&lt;&lt;CloseExcel</td> 
+<tr bgcolor="9cbf96">  <td>25/06/10 18:04:02</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.CloseExcel()[pri:0, instance:swaglab_test.ProductTest@4f0100a7]">&lt;&lt;CloseExcel</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="97ad89">  <td>25/06/08 20:38:37</td>   <td>-7871</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LockedUserLoginFailureTest()[pri:0, instance:swaglab_test.LoginTest@3b96c42e]">LockedUserLoginFailureTest</td> 
+<tr bgcolor="d39d9c">  <td>25/06/10 18:04:02</td>   <td>-13</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LockedUserLoginFailureTest()[pri:0, instance:swaglab_test.LoginTest@3cdf2c61]">LockedUserLoginFailureTest</td> 
   <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="97ad89">  <td>25/06/08 20:38:44</td>   <td>-533</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LoginFailureTest()[pri:1, instance:swaglab_test.LoginTest@3b96c42e]">LoginFailureTest</td> 
+<tr bgcolor="d39d9c">  <td>25/06/10 18:04:02</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LoginFailureTest()[pri:1, instance:swaglab_test.LoginTest@3cdf2c61]">LoginFailureTest</td> 
   <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="97ad89">  <td>25/06/08 20:38:39</td>   <td>-5490</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LoginFailureTestFromExcel()[pri:0, instance:swaglab_test.LoginTest@3b96c42e]">LoginFailureTestFromExcel</td> 
+<tr bgcolor="d39d9c">  <td>25/06/10 18:04:02</td>   <td>-10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LoginFailureTestFromExcel()[pri:0, instance:swaglab_test.LoginTest@3cdf2c61]">LoginFailureTestFromExcel</td> 
   <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="97ad89">  <td>25/06/08 20:38:42</td>   <td>-3066</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LoginFailureTestFromProperties()[pri:0, instance:swaglab_test.LoginTest@3b96c42e]">LoginFailureTestFromProperties</td> 
+<tr bgcolor="d39d9c">  <td>25/06/10 18:04:02</td>   <td>-6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LoginFailureTestFromProperties()[pri:0, instance:swaglab_test.LoginTest@3cdf2c61]">LoginFailureTestFromProperties</td> 
   <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="97ad89">  <td>25/06/08 20:38:34</td>   <td>-10564</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LoginSuccessTest()[pri:-1, instance:swaglab_test.LoginTest@3b96c42e]">LoginSuccessTest</td> 
+<tr bgcolor="d39d9c">  <td>25/06/10 18:04:02</td>   <td>-27</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LoginSuccessTest()[pri:-1, instance:swaglab_test.LoginTest@3cdf2c61]">LoginSuccessTest</td> 
   <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="dcb378">  <td>25/06/08 20:38:29</td>   <td>-15456</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp()[pri:0, instance:swaglab_test.LoginTest@3b96c42e]">&gt;&gt;SetUp</td> 
+<tr bgcolor="9cbf96">  <td>25/06/10 18:04:02</td>   <td>-39</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp()[pri:0, instance:swaglab_test.LoginTest@3cdf2c61]">&gt;&gt;SetUp</td> 
 <td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="dcb378">  <td>25/06/08 20:38:35</td>   <td>-10022</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp()[pri:0, instance:swaglab_test.LoginTest@3b96c42e]">&gt;&gt;SetUp</td> 
+<tr bgcolor="9cbf96">  <td>25/06/10 18:04:02</td>   <td>-19</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp()[pri:0, instance:swaglab_test.ProductTest@4f0100a7]">&gt;&gt;SetUp</td> 
 <td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="dcb378">  <td>25/06/08 20:38:37</td>   <td>-7425</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp()[pri:0, instance:swaglab_test.LoginTest@3b96c42e]">&gt;&gt;SetUp</td> 
-<td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="dcb378">  <td>25/06/08 20:38:40</td>   <td>-5061</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp()[pri:0, instance:swaglab_test.LoginTest@3b96c42e]">&gt;&gt;SetUp</td> 
-<td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="dcb378">  <td>25/06/08 20:38:42</td>   <td>-2665</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp()[pri:0, instance:swaglab_test.LoginTest@3b96c42e]">&gt;&gt;SetUp</td> 
-<td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="dcb378">  <td>25/06/08 20:38:29</td>   <td>-16081</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUpExcel()[pri:0, instance:swaglab_test.LoginTest@3b96c42e]">&gt;&gt;SetUpExcel</td> 
+<tr bgcolor="9cbf96">  <td>25/06/10 18:04:01</td>   <td>-747</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUpExcel()[pri:0, instance:swaglab_test.ProductTest@4f0100a7]">&gt;&gt;SetUpExcel</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="dcb378">  <td>25/06/08 20:38:35</td>   <td>-10023</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:swaglab_test.LoginTest@3b96c42e]">&lt;&lt;TearDown</td> 
-<td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="dcb378">  <td>25/06/08 20:38:37</td>   <td>-7425</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:swaglab_test.LoginTest@3b96c42e]">&lt;&lt;TearDown</td> 
-<td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="dcb378">  <td>25/06/08 20:38:40</td>   <td>-5062</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:swaglab_test.LoginTest@3b96c42e]">&lt;&lt;TearDown</td> 
-<td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="dcb378">  <td>25/06/08 20:38:42</td>   <td>-2668</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:swaglab_test.LoginTest@3b96c42e]">&lt;&lt;TearDown</td> 
-<td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="dcb378">  <td>25/06/08 20:38:45</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:swaglab_test.LoginTest@3b96c42e]">&lt;&lt;TearDown</td> 
-<td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
+<tr bgcolor="97ad89">  <td>25/06/10 18:04:02</td>   <td>-17</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductTest.addToCartTest()[pri:0, instance:swaglab_test.ProductTest@4f0100a7]">addToCartTest</td> 
+  <td>main@1937962514</td>   <td></td> </tr>
 </table>
