--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,38 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="dcb378">  <td>25/06/08 20:38:29</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUpExcel()[pri:0, instance:swaglab_test.LoginTest@3b96c42e]">&gt;&gt;SetUpExcel</td> 
+<tr bgcolor="9cbf96">  <td>25/06/10 18:04:01</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUpExcel()[pri:0, instance:swaglab_test.ProductTest@4f0100a7]">&gt;&gt;SetUpExcel</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="dcb378">  <td>25/06/08 20:38:29</td>   <td>625</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp()[pri:0, instance:swaglab_test.LoginTest@3b96c42e]">&gt;&gt;SetUp</td> 
+<tr bgcolor="9cbf96">  <td>25/06/10 18:04:02</td>   <td>708</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp()[pri:0, instance:swaglab_test.LoginTest@3cdf2c61]">&gt;&gt;SetUp</td> 
 <td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="97ad89">  <td>25/06/08 20:38:34</td>   <td>5517</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LoginSuccessTest()[pri:-1, instance:swaglab_test.LoginTest@3b96c42e]">LoginSuccessTest</td> 
+<tr bgcolor="d39d9c">  <td>25/06/10 18:04:02</td>   <td>720</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LoginSuccessTest()[pri:-1, instance:swaglab_test.LoginTest@3cdf2c61]">LoginSuccessTest</td> 
   <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="dcb378">  <td>25/06/08 20:38:35</td>   <td>6058</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:swaglab_test.LoginTest@3b96c42e]">&lt;&lt;TearDown</td> 
+<tr bgcolor="9cbf96">  <td>25/06/10 18:04:02</td>   <td>728</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp()[pri:0, instance:swaglab_test.ProductTest@4f0100a7]">&gt;&gt;SetUp</td> 
 <td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="dcb378">  <td>25/06/08 20:38:35</td>   <td>6059</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp()[pri:0, instance:swaglab_test.LoginTest@3b96c42e]">&gt;&gt;SetUp</td> 
-<td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="97ad89">  <td>25/06/08 20:38:37</td>   <td>8210</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LockedUserLoginFailureTest()[pri:0, instance:swaglab_test.LoginTest@3b96c42e]">LockedUserLoginFailureTest</td> 
+<tr bgcolor="97ad89">  <td>25/06/10 18:04:02</td>   <td>730</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductTest.addToCartTest()[pri:0, instance:swaglab_test.ProductTest@4f0100a7]">addToCartTest</td> 
   <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="dcb378">  <td>25/06/08 20:38:37</td>   <td>8656</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:swaglab_test.LoginTest@3b96c42e]">&lt;&lt;TearDown</td> 
-<td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="dcb378">  <td>25/06/08 20:38:37</td>   <td>8656</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp()[pri:0, instance:swaglab_test.LoginTest@3b96c42e]">&gt;&gt;SetUp</td> 
-<td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="97ad89">  <td>25/06/08 20:38:39</td>   <td>10591</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LoginFailureTestFromExcel()[pri:0, instance:swaglab_test.LoginTest@3b96c42e]">LoginFailureTestFromExcel</td> 
+<tr bgcolor="d39d9c">  <td>25/06/10 18:04:02</td>   <td>734</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LockedUserLoginFailureTest()[pri:0, instance:swaglab_test.LoginTest@3cdf2c61]">LockedUserLoginFailureTest</td> 
   <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="dcb378">  <td>25/06/08 20:38:40</td>   <td>11019</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:swaglab_test.LoginTest@3b96c42e]">&lt;&lt;TearDown</td> 
-<td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="dcb378">  <td>25/06/08 20:38:40</td>   <td>11020</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp()[pri:0, instance:swaglab_test.LoginTest@3b96c42e]">&gt;&gt;SetUp</td> 
-<td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="97ad89">  <td>25/06/08 20:38:42</td>   <td>13015</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LoginFailureTestFromProperties()[pri:0, instance:swaglab_test.LoginTest@3b96c42e]">LoginFailureTestFromProperties</td> 
+<tr bgcolor="d39d9c">  <td>25/06/10 18:04:02</td>   <td>737</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LoginFailureTestFromExcel()[pri:0, instance:swaglab_test.LoginTest@3cdf2c61]">LoginFailureTestFromExcel</td> 
   <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="dcb378">  <td>25/06/08 20:38:42</td>   <td>13413</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:swaglab_test.LoginTest@3b96c42e]">&lt;&lt;TearDown</td> 
-<td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="dcb378">  <td>25/06/08 20:38:42</td>   <td>13416</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp()[pri:0, instance:swaglab_test.LoginTest@3b96c42e]">&gt;&gt;SetUp</td> 
-<td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="97ad89">  <td>25/06/08 20:38:44</td>   <td>15548</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LoginFailureTest()[pri:1, instance:swaglab_test.LoginTest@3b96c42e]">LoginFailureTest</td> 
+<tr bgcolor="d39d9c">  <td>25/06/10 18:04:02</td>   <td>741</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LoginFailureTestFromProperties()[pri:0, instance:swaglab_test.LoginTest@3cdf2c61]">LoginFailureTestFromProperties</td> 
   <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="dcb378">  <td>25/06/08 20:38:45</td>   <td>16080</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:swaglab_test.LoginTest@3b96c42e]">&lt;&lt;TearDown</td> 
-<td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="dcb378">  <td>25/06/08 20:38:45</td>   <td>16081</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.CloseExcel()[pri:0, instance:swaglab_test.LoginTest@3b96c42e]">&lt;&lt;CloseExcel</td> 
+<tr bgcolor="d39d9c">  <td>25/06/10 18:04:02</td>   <td>745</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LoginFailureTest()[pri:1, instance:swaglab_test.LoginTest@3cdf2c61]">LoginFailureTest</td> 
+  <td>main@1937962514</td>   <td></td> </tr>
+<tr bgcolor="9cbf96">  <td>25/06/10 18:04:02</td>   <td>747</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.CloseExcel()[pri:0, instance:swaglab_test.ProductTest@4f0100a7]">&lt;&lt;CloseExcel</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
 </table>
