--- a/test-output/old/Simplilearn/methods.html
+++ b/test-output/old/Simplilearn/methods.html
@@ -1,8 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Simplilearn</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="856572">  <td>25/04/05 22:18:12</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.method3()[pri:0, instance:testng.AnnotationsExample@649bec2e]">&gt;&gt;method3</td> 
+<tr bgcolor="98cf9b">  <td>25/06/10 18:03:16</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.method3()[pri:0, instance:testng.AnnotationsExample@193f604a]">&gt;&gt;method3</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="67b0b6">  <td>25/04/05 22:18:12</td>   <td>13</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AnnotationsExample2.test4()[pri:0, instance:testng.AnnotationsExample2@a2431d0]">test4</td> 
+<tr bgcolor="98cf9b">  <td>25/06/10 18:03:16</td>   <td>18</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.method1()[pri:0, instance:testng.AnnotationsExample@193f604a]">&gt;&gt;method1</td> 
+<td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
+<tr bgcolor="d07cbb">  <td>25/06/10 18:03:16</td>   <td>18</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AnnotationsExample.test1()[pri:0, instance:testng.AnnotationsExample@193f604a]">test1</td> 
   <td>main@1937962514</td>   <td></td> </tr>
+<tr bgcolor="98cf9b">  <td>25/06/10 18:03:16</td>   <td>27</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.method2()[pri:0, instance:testng.AnnotationsExample@193f604a]">&lt;&lt;method2</td> 
+<td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
+<tr bgcolor="98cf9b">  <td>25/06/10 18:03:16</td>   <td>29</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.method1()[pri:0, instance:testng.AnnotationsExample@193f604a]">&gt;&gt;method1</td> 
+<td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
+<tr bgcolor="d07cbb">  <td>25/06/10 18:03:16</td>   <td>29</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AnnotationsExample.test2()[pri:0, instance:testng.AnnotationsExample@193f604a]">test2</td> 
+  <td>main@1937962514</td>   <td></td> </tr>
+<tr bgcolor="98cf9b">  <td>25/06/10 18:03:16</td>   <td>34</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.method2()[pri:0, instance:testng.AnnotationsExample@193f604a]">&lt;&lt;method2</td> 
+<td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
+<tr bgcolor="98cf9b">  <td>25/06/10 18:03:16</td>   <td>36</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.method1()[pri:0, instance:testng.AnnotationsExample2@57af006c]">&gt;&gt;method1</td> 
+<td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
+<tr bgcolor="70f7aa">  <td>25/06/10 18:03:16</td>   <td>36</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AnnotationsExample2.test4()[pri:0, instance:testng.AnnotationsExample2@57af006c]">test4</td> 
+  <td>main@1937962514</td>   <td></td> </tr>
+<tr bgcolor="98cf9b">  <td>25/06/10 18:03:16</td>   <td>39</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.method2()[pri:0, instance:testng.AnnotationsExample2@57af006c]">&lt;&lt;method2</td> 
+<td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
+<tr bgcolor="98cf9b">  <td>25/06/10 18:03:16</td>   <td>39</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.method4()[pri:0, instance:testng.AnnotationsExample@193f604a]">&lt;&lt;method4</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
 </table>
